[package]
name = "op-fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4.5.1", features = ["derive"] }
fuser = "0.14.0"
humantime-serde = "1.1.1"
libc = "0.2.153"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
slab = "0.4.9"
time = { version = "0.3.34", features = ["serde", "parsing", "formatting"] }
toml = "0.8.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
